# allergen_tracker

./: .env.deploy.example  .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  deploy.sh  docker-compose.yml  package-lock.json  pyproject.toml  setup-ssh.sh
.claude/: settings.local.json
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
api/src/: main.py  models.py
api/src/cache/: file_cache.py
api/src/routes/: allergens.py  meals.py  push.py  websocket.py
api/src/services/: ai_service.py  allergen_service.py  huckleberry.py  meal_service.py  push_service.py  realtime_listener.py
api/src/websocket/: __init__.py  connection_manager.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  config.ts  index.css
frontend/src/api/: allergens.ts  meals.ts
frontend/src/components/: AllergenCard.tsx  AllergenList.tsx  FeedLog.tsx  FoodReview.tsx  Header.tsx  MealLogger.tsx  NotificationToggle.tsx  PhotoCapture.tsx  UpdatePrompt.tsx
frontend/src/hooks/: useCurrentTime.ts  useWebSocket.ts
frontend/src/services/: notifications.ts
frontend/src/types/: allergen.ts  meal.ts
frontend/src/utils/: allergenUtils.ts  timeUtils.ts
src/: main.py  utils_fetch_solid_food_entries.py
src/allergen_tracker/: main.py
